[package]
name = "rusty-rmq-queue-migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
fern = "0.6"
futures = "0.3"
indicatif = "0.17"
lapin = "2.1"
log = "0.4"
regex = "1.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2"
