[package]
name = "rusty-rmq-queue-migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
fern = "0.6"
indicatif = "0.17"
lapin = "2.1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["v4"] }
urlencoding = "2.1.3"
futures-util = "0.3.31"
